--- a/css/index.css
+++ b/css/index.css
@@ -109,6 +109,7 @@ body {
 
 .flex-container-infos p {
     font-size: 19px;
+    margin-right: 0;
 }
 
 .perfil img{
@@ -131,6 +132,11 @@ body {
     display: flex;
     margin: 30px 0px 30px 0px;
     gap: 30px;
+    width: 100%;
+}
+
+.links a:last-child {
+    margin-left: auto;
 }
 
 .logo-info {
