--- a/css/index.css
+++ b/css/index.css
@@ -85,7 +85,7 @@ body {
 .flex-container {
     display: flex;
     align-items: center;
-    margin: 50px 150px 100px 150px;
+    margin: 50px 150px 70px 150px;
     gap: 80px;
 }
 
@@ -144,11 +144,31 @@ body {
     height: 60px;
 }
 
-.habilidades {
-    background-color: #b3df9d;
-    height: 500px;
-    box-shadow: 0px 0px 10px #559e46;
 
-}
 
 /* APRESENTAÇÃO FIM */
+
+.habilidades {
+    background-color: #b3df9d;
+    height: 700px;
+    box-shadow: 0px 0px 10px #559e46;
+    padding: 40px;
+    padding-top: 60px;
+}
+
+.logo-tecnologia-card {
+    height: 35px;
+    width: 35px;
+    margin: 0px;
+}
+
+.links-tecnologias {
+    display: flex;
+    margin: 20px 0px 20px 0px;
+    gap: 10px;
+    width: 100%;
+}
+
+.tecnologias-utilizadas {
+
+}
