--- a/css/index.css
+++ b/css/index.css
@@ -172,3 +172,11 @@ body {
 .tecnologias-utilizadas {
 
 }
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+	margin-top: 50px;
+}
