--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,11 @@ body {
     opacity: 15px;
 }
 
+.col {
+    padding-top: 0;
+    margin-top: 0;
+}
+
 .header {
     position: fixed;
     top: 0;
@@ -152,8 +157,7 @@ body {
     background-color: #b3df9d;
     height: 700px;
     box-shadow: 0px 0px 10px #559e46;
-    padding: 40px;
-    padding-top: 60px;
+    padding: 60px 40px 0 40px;
 }
 
 .logo-tecnologia-card {
@@ -164,7 +168,7 @@ body {
 
 .links-tecnologias {
     display: flex;
-    margin: 20px 0px 20px 0px;
+    margin: 10px 0px 20px 0px;
     gap: 10px;
     width: 100%;
 }
@@ -174,9 +178,15 @@ body {
 }
 
 footer {
-	background-color: #333;
+	background-color: #559e46;
 	color: #fff;
 	padding: 20px;
 	text-align: center;
 	margin-top: 50px;
+    
+    a {
+        text-decoration: none;
+        color: white;
+    }
 }
+
